--- a/assets/css/lcstyle.css
+++ b/assets/css/lcstyle.css
@@ -174,13 +174,13 @@ Margin: 20px;
 .zoom {
     padding:50px;
     background-image: url("../images/lackeen-front.jpg");
-    transition: transform .5s; /*Animation*/
+    transition: transform .9s; /*Animation*/
     Width:100%;
     height: auto;
     margin:0 auto;
 }
 .zoom:hover {
-    transform: scale(1.25);
+    transform: scale(1.5);
 }
  a {
      color:coral;
@@ -343,44 +343,88 @@ margin: 0 auto;
     background: url('../images/sm-fpage.jpg') no-repeat center center;
     height: 100%;}
 
-}
-.pic-container-def {
-    width: 200px;
-    height: 300px;
-    padding: 5px;
-    margin: 0 auto;
-    background-color: bisque;
-    border: 2px solid rgba(94, 36, 36, 0.7);
-    
+    /*Castle defences*/
 
-}
+    #defence-background-pic{
+        
+        background: url('../images/lackeen-front.jpg') no repeat center center;
+        background-position: center;
+        background-size: cover;
+        height: 1200px;
+        width: 100%;
+    }
+
+    #outer-wall {
+
+        height: 400px;
+    }
+    #window {
+
+        height: 400px;
+    }
+    #machic {
+
+        height: 400px;
+    }
+    #door {
+
+        height: 400px;
+    }
+    /*.pic-container-def-right {
+    
+        width: 300px;
+        height: 250px;
+        padding: 10px;
+    
+        margin:100px 150px;
+        background-color: bisque;
+        border: 2px solid coral;
+        float: right;
+    
+    }
+
+.pic-container-def-left {
+    
+    width: 300px;
+    height: 250px;
+    padding: 20px;
+
+    margin:0 auto 0 150px;
+    background-color: bisque;
+    border: 2px solid coral;
+    float: left;
+
+}*/
    
 
 #pic-outer-wall {
     background: url('../images/lackeen-castle-view.jpg') no-repeat center center;
-    height: 300px;
-    width:200px;
-    float:right;
-    margin-right:150px;
+    height: 250px;
+    width:300px;
+    
+    margin-right: 150px;
+    clear:left;
+   
 }
 #pic-windows {
     background: url('../images/lackeen-little-windows.jpg') no-repeat center center;
-    height: 300px;
-    width:200px;
-    float:left;
+    height: 250px;
+    width: 300px;
+    
     margin-left:150px;
 }
 #pic-machic {
     background: url('../images/lackeen-mach.jpg') no-repeat center center;
-    height: 300px;
-    width:200px;
-    float:right;
+    height: 250px;
+    width:300px;
+    
     margin-right:150px;
 }
+
 #pic-door {
     background: url('../images/lackeen-castle-door1.jpg') no-repeat center center;
     height: 300px;
-    width:200px;
+    width:250px;
     float:left;
     margin-left:150px;
 }
