--- a/assets/css/lcstyle.css
+++ b/assets/css/lcstyle.css
@@ -170,7 +170,7 @@ Margin: 20px;
     padding:50px;
     /*background-image: url("../images/lackeen-front.jpg");*/
     transition: transform .5s; /*Animation*/
-    anim
+    
     Width:100%;
     height: auto;
     margin:0 auto;
@@ -977,30 +977,62 @@ footer  a {
 
     .contact-form
     {
-        margin: 80px 20% 30px 0;
+        margin: 50px 20% 30px 0;
         color:bisque;
-        background-color: rgba(94, 36, 36, 0.7);
+        background-color: rgba(94, 36, 36, 0.8);
         max-width: 400px;
         position: absolute;
-        left:10%;
-        padding:30px;
+        left:5%;
+        padding:20px;
     }
     .contact-form >h2 {
         color: bisque;
-        margin-bottom: 20px;
+        margin-bottom: 5px;
     }
 
     .text-input {
-        background: transparent;
-        color: bisque;
+        background: bisque;
+        color: #000;
+        font-size: large;
         width:100%;
         height:25px;
         margin: 5px 0 20px 0;
         border :2px solid bisque;
         border-radius: 5px;
     }
+    #date{
+        background: bisque;
+        color: #000;
+        width:50%;
+        height:25px;
+        margin: 5px 0 20px 0;
+        border :2px solid bisque;
+        border-radius: 5px;
+    }
+      #number{
+        background: bisque;
+        color: #000;
+        width:25%;
+        height: 30px;
+        margin: 5px 0 20px 0;
+        border :2px solid bisque;
+        border-radius: 5px;
+        
+    }
+
+    #message{
+        background: bisque;
+        color: #000;
+        width:100%;
+        height:100px;
+        margin: 5px 0 20px 0;
+        border :2px solid bisque;
+        border-radius: 5px;
+
+    }
 .text-input:hover {
-    border-color: bisque;}
+    border-color: 2px solid darkred;}
+
 .join-button {
     margin-top:20px;
     border-radius: 2px;
@@ -1012,6 +1044,30 @@ footer  a {
     display: block;
 }
 
+#info-text-fdest {
+        font-size: 130%;
+        font-family: eczar, serif;
+        
+    
+        text-align: center;
+    
+        padding-top: 80px;
+        padding-left: 10px;
+    
+    
+        height: 180px;
+        width: 50%;
+    
+        bottom: 100px;
+        left: 100px;
+    
+        background-color: rgba(94, 36, 36, 0.7);
+    
+        position: absolute;
+        border: 1px solid bisque;
+        border-radius: 50%;
+    }
+    
 
 
 /*#last-word {
