--- a/assets/css/lcstyle.css
+++ b/assets/css/lcstyle.css
@@ -73,14 +73,14 @@ h2 {
     /* End Nav bar*/
 }
 
-/* Summary information*/
+/* home page 81-*/
 
 #summary-outer {
     height: 600px;
     width: 100%;
     overflow: hidden;
     position: relative;
-    
+
 }
 
 #cover-text,
@@ -135,52 +135,51 @@ h2 {
         transform: scale(1.05);
     }
 }
- a{
-   
-    color:coral;
- }
- 
 
- #defence-intro {
-text-align:center;
-Margin: 20px;
+a {
 
- }
- #defence-intro h2{
-     font-size:200%;
- }
- #defence-intro p {
-     padding: 0 25%;
-     
- }
- /*.defence{
-    clear: left;
-    background: url("../images/lackeen-castle-view.jpg");
-    background-size: cover;
-    background-position: center;
-    height: 600px;
-    width: 100%;
-    
- }*/
- 
- 
+    color: coral;
+}
+
+
+#defence-intro {
+    text-align: center;
+    Margin: 20px;
+
+}
+
+#defence-intro h2 {
+    font-size: 200%;
+}
+
+#defence-intro p {
+    padding: 0 25%;
+
+}
+
+
+
 
 
 .zoom {
-    padding:50px;
-    /*background-image: url("../images/lackeen-front.jpg");*/
-    transition: transform .5s; /*Animation*/
-    
-    Width:100%;
+    padding: 50px;
+
+    transition: transform .5s;
+    /*Animation*/
+
+    Width: 100%;
     height: auto;
-    margin:0 auto;
+    margin: 0 auto;
 }
+
 .zoom:hover {
     transform: scale(1.1);
 }
- a {
-     color:coral;
- }
+
+a {
+    color: coral;
+}
+
 #info-text {
 
     font-size: 130%;
@@ -206,13 +205,7 @@ Margin: 20px;
     border-radius: 50%;
 }
 
-/*
-h2 {
-    margin-left: 30px;
-    padding: auto;
-font-size: 200%;
-    text-transform: uppercase;
-}*/
+
 
 #lackeen-summary {
     height: 500px;
@@ -267,8 +260,10 @@ font-size: 200%;
     text-align: right;
 
 }
+
 .right-about-heading h2 {
-    text-align: left;}
+    text-align: left;
+}
 
 .left-about-heading p {
     padding-top: 5px;
@@ -286,7 +281,8 @@ font-size: 200%;
     clear: both;
     margin-bottom: 50px;
 }
-.right-about-heading-sm  p {
+
+.right-about-heading-sm p {
     text-align: left;
     padding-top: 5px;
 }
@@ -315,248 +311,6 @@ hr {
 
 
 }
-/* Stowe Missal center pic*/
-
-
-.pic-container {
-    width: 200px;
-    height: 300px;
-    padding: 20px;
-    margin: 0 auto;
-    background-color: bisque;
-    border: 2px solid rgba(94, 36, 36, 0.7);
-    
-
-}
-#pic-missal {
-    background: url('../images/sm-fpage.jpg') no-repeat center center;
-    height: 100%;}
-
-    /*Castle defences*/
-
-    #defence-outer {
-        height: 1200px;
-        width: 100%;
-        overflow: hidden;
-        position: relative;
-    }
-
-    .castle-defence-background { 
-        
-        
-        background: url('../images/lackeen-front.jpg') no-repeat center center; 
-        height: 1200px;
-        background-size:cover ;
-        width: 100%;
-        
-    }
-    #info-text-window {
-
-        font-size: 110%;
-        font-family: eczar, serif;
-
-       
-    
-        text-align: center;
-    
-        padding-top: 20px;
-        padding-left: 1px;
-    
-    
-        height: 150px;
-        width: 50%;
-    
-        top: 500px;
-        left: 60px;
-    
-        background-color: rgba(99, 22, 41, 0.5);
-    
-        position: absolute;
-        border: 1px solid bisque;
-        /*border-radius: 50%;*/
-    }
-    #info-text-mach {
-
-        font-size: 100%;
-        font-family: eczar, serif;
-        text-transform: uppercase;
-    
-        text-align: center;
-    
-        padding-top: 20px;
-        padding-left: 10px;
-    
-    
-        height: 120px;
-        width: 50%;
-    
-        top: 300px;
-        right: 60px;
-    
-        background-color: rgba(99, 22, 41, 0.5);
-    
-        position: absolute;
-        border: 1px solid bisque;
-        /*border-radius: 50%;*/
-    }
-    #info-text-door {
-
-        font-size: 100%;
-        font-family: eczar, serif;
-        text-transform: uppercase;
-    
-        text-align: center;
-    
-        padding-top: 20px;
-        padding-left: 10px;
-    
-    
-        height: 150px;
-        width: 50%;
-    
-        bottom: 120px;
-        left: 80px;
-    
-        background-color: rgba(99, 22, 41, 0.5);
-    
-        position: absolute;
-        border: 1px solid bisque;
-        /*border-radius: 50%;*/
-    }
-    #info-text-intro {
-
-        font-size: 120%;
-        font-family: eczar, serif;
-        text-transform: uppercase;
-    
-        text-align: center;
-    
-        padding-top: 20px;
-        padding-left: 10px;
-    
-    
-        height: 250px;
-        width: 40%;
-    
-        top: 100px;
-        left: 30px;
-    
-        background-color: rgba(0, 0, 139, 0.7);
-    
-        position: absolute;
-        border: 1px solid bisque;
-        border-radius: 50%;
-    }
-
-
-    
-    #info-text-window, #info-text-mach, #info-text-door h3 {
-
-        text-transform: uppercase;
-        font-size: 300;
-    }
-    #info-text-window,  #info-text-mach,  #info-text-door, #info-text-intro p {
-
-        text-transform: none;
-        
-    }
-    /*
-
-    #outer-wall {
-
-        height: 400px;
-    }
-    #window {
-
-        height: 400px;
-    }
-    #machic {
-
-        height: 400px;
-    }
-    #door {
-
-        height: 400px;
-    }
-    /*.pic-container-def-right {
-    
-        width: 300px;
-        height: 250px;
-        padding: 10px;
-    
-        margin:100px 150px;
-        background-color: bisque;
-        border: 2px solid coral;
-        float: right;
-    
-    }
-
-.pic-container-def-left {
-    
-    width: 300px;
-    height: 250px;
-    padding: 20px;
-
-    margin:0 auto 0 150px;
-    background-color: bisque;
-    border: 2px solid coral;
-    float: left;
-
-}*/
-   
-
-#pic-outer-wall {
-    background: url('../images/lackeen-castle-view.jpg') no-repeat center center;
-    height: 250px;
-    width:300px;
-    
-    margin-right: 150px;
-    clear:left;
-   
-}
-#pic-windows {
-    background: url('../images/lackeen-little-windows.jpg') no-repeat center center;
-    height: 250px;
-    width: 300px;
-    
-    margin-left:150px;
-}
-#pic-machic {
-    background: url('../images/lackeen-mach.jpg') no-repeat center center;
-    height: 250px;
-    width:300px;
-    
-    margin-right:150px;
-}
-
-#pic-door {
-    background: url('../images/lackeen-castle-door1.jpg') no-repeat center center;
-    height: 300px;
-    width:250px;
-    float:left;
-    margin-left:150px;
-}
-
-
-.defence-fact-left{
-
-    margin: 150px 50px;
-    width: 40%;
-    height: 300px;
-    float:left;
-    
-}
-.defence-fact-right{
-
-    margin: 150px 50px;
-    width: 40%;
-    height: 300px;
-    float:right;
-    
-}
-/*#sm-gallery {#}*/
-
-
 
 /*location*/
 
@@ -595,82 +349,6 @@ hr {
     height: 300px;
 
 }
-/*end location*/
-
-/*stowe missal gallery*/
-/*#sm-gallery{
-    clear: both;
-    line-height: auto;
-  
-    bottom: 100px;*/
-
-    #sm-summary{
-        height: 600px;
-    width: 100%;
-    overflow: hidden;
-    position: relative;
-    margin-top: 20px;
-    }
-    
-#sm-pics {
-    height: 770px;
-    width: 100%;
-    overflow: hidden;
-    position: relative;
-    clear:both;
-    line-height:auto;
-    bottom: 50px;
-}
-
-#sm-pics h2 {
-    color: bisque;
-    text-transform: uppercase;
-    text-align: center;
-    font-size: 200%;
-    letter-spacing: 4px;
-    
-    padding: 20px;
-}
-
-div.sm-gallery{
-    margin: 30px;
-    float: left;
-   
-    width:28.5%;
-}
-
-div.sm-gallery  img {
-   
-    width:100%;
-    height: 500px; 
-}
-div.desc {
-    padding: 15px;
-    text-align: center;
-    font-size: 110%;
-}
-#final-line{
-    margin-bottom:100px;
-}
-.center  {
-    display: block;
-    margin: 0 auto ;
-    
-    width: 50%;
-}
-
-
-
-
-/*Contact form*/
-/*.castle-background-form {
-    clear: left;
-    background: url("../images/lackeen-castle-view.jpg");
-    background-size: cover;
-    background-position: center;
-    height: 00px;
-    width: 100%;
-}*/
 
 /* footer*/
 
@@ -685,8 +363,9 @@ footer {
     height: 60px;
 
 }
-footer  a {
-    color:#00008B;
+
+footer a {
+    color: #00008B;
     padding: 5px 30px;
 }
 
@@ -697,7 +376,7 @@ footer  a {
 
 }
 
-.social-networks > li {
+.social-networks>li {
 
     display: inline;
 }
@@ -710,10 +389,236 @@ footer  a {
     color: inherit;
 
 }
-#copyright {
-    
-    display: inline-block;
+
+
+
+/*Castle defences*/
+
+#defence-outer {
+    height: 1200px;
+    width: 100%;
+    overflow: hidden;
+    position: relative;
 }
+
+.castle-defence-background {
+
+
+    background: url('../images/lackeen-front.jpg') no-repeat center center;
+    height: 1200px;
+    background-size: cover;
+    width: 100%;
+
+}
+
+#info-text-window {
+
+    font-size: 110%;
+    font-family: eczar, serif;
+
+
+
+    text-align: center;
+
+    padding-top: 20px;
+    padding-left: 1px;
+
+
+    height: 150px;
+    width: 50%;
+
+    top: 500px;
+    left: 60px;
+
+    background-color: rgba(99, 22, 41, 0.5);
+
+    position: absolute;
+    border: 1px solid bisque;
+    /*border-radius: 50%;*/
+}
+
+#info-text-mach {
+
+    font-size: 100%;
+    font-family: eczar, serif;
+    text-transform: uppercase;
+
+    text-align: center;
+
+    padding-top: 20px;
+    padding-left: 10px;
+
+
+    height: 120px;
+    width: 50%;
+
+    top: 300px;
+    right: 60px;
+
+    background-color: rgba(99, 22, 41, 0.5);
+
+    position: absolute;
+    border: 1px solid bisque;
+    /*border-radius: 50%;*/
+}
+
+#info-text-door {
+
+    font-size: 100%;
+    font-family: eczar, serif;
+    text-transform: uppercase;
+
+    text-align: center;
+
+    padding-top: 20px;
+    padding-left: 10px;
+
+
+    height: 150px;
+    width: 50%;
+
+    bottom: 120px;
+    left: 80px;
+
+    background-color: rgba(99, 22, 41, 0.5);
+
+    position: absolute;
+    border: 1px solid bisque;
+    /*border-radius: 50%;*/
+}
+
+#info-text-intro {
+
+    font-size: 120%;
+    font-family: eczar, serif;
+    text-transform: uppercase;
+
+    text-align: center;
+
+    padding-top: 20px;
+    padding-left: 10px;
+
+
+    height: 250px;
+    width: 40%;
+
+    top: 100px;
+    left: 30px;
+
+    background-color: rgba(0, 0, 139, 0.7);
+
+    position: absolute;
+    border: 1px solid bisque;
+    border-radius: 50%;
+}
+
+
+
+#info-text-window,
+#info-text-mach,
+#info-text-door h3 {
+
+    text-transform: uppercase;
+    font-size: 300;
+}
+
+#info-text-window,
+#info-text-mach,
+#info-text-door,
+#info-text-intro p {
+
+    text-transform: none;
+
+}
+
+/*End castle defence*/
+
+/*Stowe Missal*/
+
+#sm-summary {
+    height: 600px;
+    width: 100%;
+    overflow: hidden;
+    position: relative;
+    margin-top: 20px;
+}
+
+/* Stowe Missal center pic*/
+
+
+.pic-container {
+    width: 200px;
+    height: 300px;
+    padding: 20px;
+    margin: 0 auto;
+    background-color: bisque;
+    border: 2px solid rgba(94, 36, 36, 0.7);
+
+
+}
+
+#pic-missal {
+    background: url('../images/sm-fpage.jpg') no-repeat center center;
+    height: 100%;
+}
+
+
+#sm-pics {
+    height: 770px;
+    width: 100%;
+    overflow: hidden;
+    position: relative;
+    clear: both;
+    line-height: auto;
+    bottom: 50px;
+}
+
+#sm-pics h2 {
+    color: bisque;
+    text-transform: uppercase;
+    text-align: center;
+    font-size: 200%;
+    letter-spacing: 4px;
+
+    padding: 20px;
+}
+
+div.sm-gallery {
+    margin: 30px;
+    float: left;
+
+    width: 28.5%;
+}
+
+div.sm-gallery img {
+
+    width: 100%;
+    height: 500px;
+}
+
+div.desc {
+    padding: 15px;
+    text-align: center;
+    font-size: 110%;
+}
+
+#final-line {
+    margin-bottom: 100px;
+}
+
+.center {
+    display: block;
+    margin: 0 auto;
+
+    width: 50%;
+}
+
+
+
+
+
+
+
 
 /* Media queries*/
 
@@ -771,11 +676,11 @@ footer  a {
 
 @media screen and (max-width:850px) {
 
-    #info-text1{
+    #info-text1 {
 
         font-size: 100%;
         font-family: eczar, serif;
-        font-weight:100;
+        font-weight: 100;
         text-transform: uppercase;
 
         text-align: center;
@@ -863,7 +768,7 @@ footer  a {
 /* media queries for screens 425px and lower*/
 
 /* hamburger menu TODO*/
-@media screen and (max-width:425px ) {
+@media screen and (max-width:425px) {
 
 
 
@@ -965,79 +870,83 @@ footer  a {
         text-align: center;
         padding:0 20px;
     }*/
-    /*FORM*/
+/*FORM*/
 
-    .form-section { 
-        clear: left;
-        background: url('../images/lackeencastle7.jpg');
-        background-size: cover;
-        background-position: center;
+.form-section {
+    clear: left;
+    background: url('../images/lackeencastle7.jpg');
+    background-size: cover;
+    background-position: center;
     height: 900px;
-    }
+}
 
-    .contact-form
-    {
-        margin: 50px 20% 30px 0;
-        color:bisque;
-        background-color: rgba(94, 36, 36, 0.8);
-        max-width: 400px;
-        position: absolute;
-        left:5%;
-        padding:20px;
-    }
-    .contact-form >h2 {
-        color: bisque;
-        margin-bottom: 5px;
-    }
+.contact-form {
+    margin: 50px 20% 30px 0;
+    color: bisque;
+    background-color: rgba(94, 36, 36, 0.8);
+    max-width: 400px;
+    position: absolute;
+    left: 5%;
+    padding: 20px;
+}
 
-    .text-input {
-        background: bisque;
-        color: #000;
-        font-size: large;
-        width:100%;
-        height:25px;
-        margin: 5px 0 20px 0;
-        border :2px solid bisque;
-        border-radius: 5px;
-    }
-    #date{
-        background: bisque;
-        color: #000;
-        width:50%;
-        height:25px;
-        margin: 5px 0 20px 0;
-        border :2px solid bisque;
-        border-radius: 5px;
-    }
-      #number{
-        background: bisque;
-        color: #000;
-        width:25%;
-        height: 30px;
-        margin: 5px 0 20px 0;
-        border :2px solid bisque;
-        border-radius: 5px;
-        
-    }
+.contact-form>h2 {
+    color: bisque;
+    margin-bottom: 5px;
+}
 
-    #message{
-        background: bisque;
-        color: #000;
-        width:100%;
-        height:100px;
-        margin: 5px 0 20px 0;
-        border :2px solid bisque;
-        border-radius: 5px;
+.text-input {
+    background: bisque;
+    color: #000;
+    font-size: large;
+    width: 100%;
+    height: 25px;
+    margin: 5px 0 20px 0;
+    border: 2px solid bisque;
+    border-radius: 5px;
+}
 
-    }
+#date {
+    background: bisque;
+    color: #000;
+    width: 50%;
+    height: 25px;
+    margin: 5px 0 20px 0;
+    border: 2px solid bisque;
+    border-radius: 5px;
+}
+
+#number {
+    background: bisque;
+    color: #000;
+    width: 25%;
+    height: 30px;
+    margin: 5px 0 20px 0;
+    border: 2px solid bisque;
+    border-radius: 5px;
+
+}
+
+#message {
+    background: bisque;
+    color: #000;
+    width: 100%;
+    height: 100px;
+    margin: 5px 0 20px 0;
+    border: 2px solid bisque;
+    border-radius: 5px;
+
+}
+
 .text-input:hover {
-    border-color: 2px solid darkred;}
+    border-color: 2px solid darkred;
+}
 
 .join-button {
-    margin-top:20px;
+    margin-top: 20px;
     border-radius: 2px;
-    padding:15px 32px 15px 32px;
-    text-align:center;
+    padding: 15px 32px 15px 32px;
+    text-align: center;
     font-size: 100%;
     background-color: rgb(0, 0, 139, 0.7);
     color: bisque;
@@ -1045,28 +954,25 @@ footer  a {
 }
 
 #info-text-fdest {
-        font-size: 130%;
-        font-family: eczar, serif;
-        
-    
-        text-align: center;
-    
-        padding-top: 80px;
-        padding-left: 10px;
-    
-    
-        height: 180px;
-        width: 50%;
-    
-        bottom: 100px;
-        left: 100px;
-    
-        background-color: rgba(94, 36, 36, 0.7);
-    
-        position: absolute;
-        border: 1px solid bisque;
-        border-radius: 50%;
-    }
-    
+    font-size: 130%;
+    font-family: eczar, serif;
 
 
+    text-align: center;
+
+    padding-top: 80px;
+    padding-left: 10px;
+
+
+    height: 180px;
+    width: 50%;
+
+    bottom: 100px;
+    left: 100px;
+
+    background-color: rgba(94, 36, 36, 0.7);
+
+    position: absolute;
+    border: 1px solid bisque;
+    border-radius: 50%;
+}
