--- a/assets/css/lcstyle.css
+++ b/assets/css/lcstyle.css
@@ -136,9 +136,11 @@ h2 {
     }
 }
 
-a {
+#right-about a {
 
-    color: coral;
+    color: coral);
+    text-decoration:none;
+    font-weight:400;
 }
 
 
@@ -850,26 +852,7 @@ div.desc {
     }
 }
 
-/*#lackeen-summary { 
-        width : 90%;
-        height:1200px;
 
-        margin:0 auto;
-
-    }
-    .left-about-heading, .right-about-heading {
-        width: inherit;
-    }
-
-    .left-about-heading h2, .right-about-heading h2 {
-        width: 100%;
-        text-align: center;
-    }
-    .left-about-heading h2, .right-about-heading h2 {
-        
-        text-align: center;
-        padding:0 20px;
-    }*/
 /*FORM*/
 
 .form-section {
