--- a/assets/css/lcstyle.css
+++ b/assets/css/lcstyle.css
@@ -19,7 +19,9 @@ body {
 /* headings and logo*/
 
 h1,
-h2 {
+h2,
+h3,
+h6 {
     color: bisque;
     text-transform: uppercase;
     letter-spacing: 4px;
@@ -27,6 +29,8 @@ h2 {
     ;
     padding-bottom: 20px;
 }
+
+    
 
 #logo {
     float: left;
@@ -138,7 +142,7 @@ h2 {
 
 #right-about a {
 
-    color: coral);
+    color: coral;
     text-decoration:none;
     font-weight:400;
 }
@@ -235,7 +239,7 @@ a {
     float: right;
     line-height: 20px;
     clear: both;
-    margin-bottom: 50px;
+    margin:20px auto;
 }
 
 #center-about {
@@ -244,7 +248,8 @@ a {
 }
 
 #right-about {
-    padding-top: 30px;
+    
+  margin: 20px auto;
     width: 33%;
     float: right;
 
@@ -255,7 +260,7 @@ a {
     float: left;
     line-height: 20px;
     clear: both;
-    margin-bottom: 50px;
+    margin: 0 auto;
 }
 
 .right-about-heading h2 {
@@ -277,17 +282,30 @@ a {
 }
 
 .right-about-heading-sm {
-    width: 60%;
+    width: 85%;
+    
     float: left;
     line-height: 20px;
     clear: both;
-    margin-bottom: 50px;
+    margin:20px 50px 0 auto;
 }
 
 .right-about-heading-sm p {
     text-align: left;
-    padding-top: 5px;
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 hr {
     border-top: 1px solid bisque;
@@ -347,7 +365,7 @@ hr {
     padding: 5px auto 10px auto;
     width: 45%;
     float: right;
-    font-size: 120%;
+    font-size: 100%;
     height: 300px;
 
 }
@@ -359,16 +377,23 @@ footer {
     left: 0;
     bottom: 0;
     width: 100%;
-    color: #00008b;
-    background-color: bisque;
+    color: bisque;
+    background-color: #00008b;
     text-align: center;
-    height: 60px;
+    height: 80px;
 
 }
 
 footer a {
-    color: #00008B;
+    color: bisque;
     padding: 5px 30px;
+}
+
+footer > h6{
+    text-align:right;
+    display:inline;
+    padding:5px;
+    margin-top: 0px;
 }
 
 
@@ -415,7 +440,7 @@ footer a {
 
 #info-text-window {
 
-    font-size: 110%;
+    font-size: 100%;
     font-family: eczar, serif;
 
     text-align: center;
@@ -438,7 +463,7 @@ footer a {
 
 #info-text-mach {
 
-    font-size: 110%;
+    font-size: 100%;
     font-family: eczar, serif;
     text-transform: uppercase;
 
@@ -462,18 +487,17 @@ footer a {
 
 #info-text-door {
 
-    font-size: 110%;
+    font-size: 100%;
     font-family: eczar, serif;
     text-transform: uppercase;
 
     text-align: center;
 
-    padding-top: 20px;
-    padding-left: 10px;
+    padding: 5px;
 
 
-    height: 150px;
-    width: 50%;
+    height: 180px;
+    width: 45%;
 
     bottom: 120px;
     left: 80px;
@@ -482,12 +506,12 @@ footer a {
 
     position: absolute;
     border: 1px solid bisque;
-    /*border-radius: 50%;*/
+    border-radius: 5%;
 }
 
 #info-text-intro {
 
-    font-size: 110%;
+    font-size: 100%;
     font-family: eczar, serif;
     text-transform: uppercase;
 
@@ -519,15 +543,17 @@ footer a {
     text-transform: uppercase;
    padding: 0 auto;
     Letter-spacing: 4px;
+    padding-top: 15px;
    
 }
 
-#info-text-window,
-#info-text-mach,
-#info-text-door,
+#info-text-window p,
+#info-text-mach p,
+#info-text-door p,
 #info-text-intro p {
 
     text-transform: none;
+    padding-bottom: 5px;
 
 }
 
@@ -564,7 +590,7 @@ footer a {
 
 
 #sm-pics {
-    height: 770px;
+    height: 650px;
     width: 100%;
     overflow: hidden;
     position: relative;
@@ -584,7 +610,7 @@ footer a {
 }
 
 div.sm-gallery {
-    margin: 30px;
+    margin: 20px;
     float: left;
 
     width: 28.5%;
@@ -593,17 +619,19 @@ div.sm-gallery {
 div.sm-gallery img {
 
     width: 100%;
-    height: 500px;
+    height: 400px;
 }
 
 div.desc {
-    padding: 15px;
+    padding: 20px auto;
     text-align: center;
-    font-size: 110%;
+    font-size: 100%;
 }
 
 #final-line {
     margin-bottom: 100px;
+    font-size:100%;
+
 }
 
 .center {
