media quers castdef and stowemissal pages for scr426 and lower

--- a/assets/css/lcstyle.css
+++ b/assets/css/lcstyle.css
@@ -106,31 +106,6 @@ h6
     width: 100%;
 }
    
-.stowe-missal-background {
-    clear: left;
-    background: url("../images/sm-cover-both.jpg");
-    background-size: cover;
-    background-position: center;
-    height: 600px;
-    width: 100%;
-/* animation on opening page*/
-
-    animation-name: missal-zoom;
-    animation-duration: 5s;
-    animation-fill-mode: forward;
-}
-/* create level of zoom for missal*/
-
-@keyframes missal-zoom {
-    from {
-        transform: scale(1);
-    }
-
-    to {
-        transform: scale(1.05);
-    }
-}
-
 #right-about a {
 
     color: coral;
@@ -453,7 +428,7 @@ footer > h6{
     top: 600px;
     left: 60px;
 
-    background-color: rgba(99, 22, 41, 0.5);
+    background-color: rgba(99, 22, 41, 0.7);
 
     position: absolute;
     border: 1px solid bisque;
@@ -477,7 +452,7 @@ footer > h6{
     top: 300px;
     right: 30px;
 
-    background-color: rgba(99, 22, 41, 0.5);
+    background-color: rgba(99, 22, 41, 0.7);
 
     position: absolute;
     border: 1px solid bisque;
@@ -501,7 +476,7 @@ footer > h6{
     bottom: 120px;
     left: 80px;
 
-    background-color: rgba(99, 22, 41, 0.5);
+    background-color: rgba(99, 22, 41, 0.7);
 
     position: absolute;
     border: 1px solid bisque;
@@ -525,7 +500,7 @@ footer > h6{
     top: 70px;
     left: 30px;
 
-    background-color: rgba(0, 0, 139, 0.7);
+    background-color: rgba(99, 22, 41, 0.7);
 
     position: absolute;
     border: 1px solid bisque;
@@ -559,6 +534,31 @@ footer > h6{
 /*End castle defence*/
 
 /*Stowe Missal*/
+stowe-missal-background {
+    clear: left;
+    background: url("../images/sm-cover-both.jpg");
+    background-size: cover;
+    background-position: center;
+    height: 600px;
+    width: 100%;
+/* animation on opening page*/
+
+    animation-name: missal-zoom;
+    animation-duration: 5s;
+    animation-fill-mode: forward;
+}
+/* create level of zoom for missal*/
+
+@keyframes missal-zoom {
+    from {
+        transform: scale(1);
+    }
+
+    to {
+        transform: scale(1.05);
+    }
+}
+
 
 #sm-summary {
     height: 600px;
@@ -991,7 +991,7 @@ div.desc {
     
 }
 #menu{
-    font-size:80%;
+    font-size:90%;
     text-transform:uppercase;
     line-height:40px;
 }
@@ -1006,5 +1006,119 @@ h1 {
     margin-right:60px;
     float:right;
 }
-}
+
     
+h2, h3{
+    letter-spacing: 1px;
+    padding-bottom: 5px;
+}
+#info-text{
+    font-size:130%;
+    text-transform: capitalize;
+    color:rgba(94, 36, 36, 1);
+background-color:transparent;
+border:none;
+position: absolute;
+}
+#info-text > h2{
+    
+    color:transparent;
+}
+#lackeen-summary{
+    text-align: center;
+    margin:0 auto;
+    padding:0 auto;
+}
+#lackeen summary> h3{
+    color: rgba(94, 36, 36, 1);
+}
+    #left-about-heading{
+
+        float:left;
+    }
+    
+.right-about-heading{
+    Float:right;
+}
+}#left-about, #right-about{
+    margin: 0 auto;
+    Padding:0 auto;
+}
+#lackeen-summary{
+    height:1250px;
+}
+
+#info-text-window
+
+{
+    font-size:90%;
+    padding:0 ;
+        width:60%;
+    margin:0 auto;
+    left:25px;
+    top:600px;
+}
+#info-text-mach{
+    font-size:90%;
+    padding:0 ;
+        width:70%;
+    margin:0 auto;
+    top:20px;
+    right:30px;
+}
+
+#info-text-intro{
+    font-size:95%;
+    padding:0 ;
+    height:210px;
+        width:90%;
+        top:300px;
+    margin:0 auto 30;
+    clear:left;
+}
+#info-text-door{
+    font-size:90%;
+    padding:0 ;
+    height:200px;
+        width:60%;
+    margin:0 auto;
+    left:50px;
+    bottom: 90px;
+
+}
+
+#info-text-window >h2,
+#info-text-mach >h2,
+#info-text-intro >h2,
+#info-text-door >h2{
+    text-transform: capitalize;
+    text-decoration-line:1px;
+    letter-spacing:0 ;
+}
+.stowe-missal-background {
+    clear: left;
+    background: url("../images/sm-cover.jpg");
+    background-size: cover;
+    background-position-x: 50%;
+    background-position-y: 0%;
+    height: 400px;
+    width: 100%;
+}
+
+#info-text h2,  h3{
+
+    color: bisque;
+    text-transform:capitalize;
+    text-align:center;
+    font-size:200%;
+    
+}
+   #info-text{
+       top:100px;
+   }
+
+   #info-text h3{
+       color:transparent;
+   }
+    
+
