--- a/assets/css/lcstyle.css
+++ b/assets/css/lcstyle.css
@@ -25,7 +25,7 @@ h3 {
     letter-spacing: 4px;
     font-family: PT+Serif, Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     ;
-    padding-bottom: 20px;
+padding-bottom:20px;
 }
 
 h6 {
@@ -150,6 +150,31 @@ a {
 }
 
 #info-text {
+
+    font-size: 130%;
+    font-family: eczar, serif;
+    text-transform: uppercase;
+
+    text-align: center;
+
+    padding-top: 20px;
+    padding-left: 10px;
+
+
+    height: 200px;
+    width: 40%;
+
+    bottom: 100px;
+    left: 100px;
+
+    background-color: rgba(94, 36, 36, 0.7);
+
+    position: absolute;
+    border: 1px solid bisque;
+    border-radius: 50%;
+}
+
+#info-text-sm {
 
     font-size: 130%;
     font-family: eczar, serif;
@@ -573,23 +598,6 @@ footer>h6 {
     background-position: center;
     height: 600px;
     width: 100%;
-    /* animation on opening page*/
-
-    animation-name: missal-zoom;
-    animation-duration: 5s;
-    animation-fill-mode: forward;
-}
-
-/* create level of zoom for missal*/
-
-@keyframes missal-zoom {
-    from {
-        transform: scale(1);
-    }
-
-    to {
-        transform: scale(1.05);
-    }
 }
 
 
@@ -682,9 +690,9 @@ div.desc {
 
 /* Media queries*/
 
-/* For lap-top screens max-width 1024px and down*/
+/*  screens max-width 1024px and down*/
 @media screen and (max-width:1024px) {
-
+h1{padding:20px;}
     #menu {
         clear: left;
         float: left;
@@ -732,11 +740,14 @@ div.desc {
 
 }
 
-/* Media query adjustments for screens from 850px and lower*/
+/* Media query  850px and lower*/
 
 @media screen and (max-width:850px) {
 
-    #info-text1 {
+    h1{
+        padding:10px;
+    }
+    #info-text {
 
         font-size: 100%;
         font-family: eczar, serif;
@@ -745,10 +756,10 @@ div.desc {
 
         text-align: center;
 
-        padding: 0 auto;
+        padding: 0;
 
 
-        height: 300px;
+        height: 400px;
         width: 50%;
 
         bottom: 530px;
@@ -772,9 +783,9 @@ div.desc {
     }
 
     #lackeen-summary {
-        width: 80%;
-        height: 1050px;
+        text-align: center;
         margin: 0 auto;
+        padding: 0;
 
 
     }
@@ -785,27 +796,26 @@ div.desc {
 
     }
 
+   
+    #left-about-heading {
+
+        float: left;
+    }
+
+    .right-about-heading {
+        Float: right;
+    }
+
     #left-about,
     #right-about {
-
-        width: 100%;
-        float: left;
-        padding: 0;
-
-
+        margin: 0 auto;
+        Padding: 0 auto;
+        width:100%;
+        
     }
 
-    .left-about-heading h2,
-    .right-about-heading h2 {
-        text-align: justify;
-        padding: 0 auto;
-    }
-
-    .left-about-heading p,
-    .right-about-heading p {
-        width: 100%;
-        text-align: justify;
-        padding: 0 auto;
+    #lackeen-summary {
+        height: 1150px;
     }
 
     hr {
@@ -827,7 +837,7 @@ div.desc {
 
 /* media queries for screens 425px and lower*/
 
-/* hamburger menu TODO*/
+/* hamburger menu TODO
 @media screen and (max-width:425px) {
 
 
@@ -885,30 +895,14 @@ div.desc {
         font-family: eczar, serif;
         font-weight: 300;
 
-    }
+    }*-*/
 
-    hr {
-        border-top: 1px solid bisque;
-        width: 100%;
-        margin: 5px 0;
-    }
+  
 
-    #location {
-        height: 600px;
-    }
+    
 
-    #map,
-    #directions {
-        width: 100%;
-        margin-left: 5px;
-        padding: 0 auto;
+   
 
-    }
-
-    #directions {
-        text-align: center;
-    }
-}
 
 
 /*FORM*/
@@ -1029,9 +1023,13 @@ div.desc {
     }
 
     #menu {
-        font-size: 90%;
-        text-transform: uppercase;
-        line-height: 40px;
+        font-size: 80%;
+        letter-spacing:none;
+        line-height: 20px;
+        text-transform:uppercase;
+        margin:0 auto;
+        float:left;
+
     }
 
     h1 {
@@ -1044,15 +1042,15 @@ div.desc {
     }
 
     #menu li {
-        margin-right: 60px;
-        float: right;
+        margin:0 20px;
+        
     }
 
 
     h2,
     h3 {
         letter-spacing: 1px;
-        padding-bottom: 5px;
+        padding-bottom: 10px;
     }
 
     #info-text {
@@ -1075,9 +1073,9 @@ div.desc {
         padding: 0;
     }
 
-    #lackeen summary>h3 {
+    /*#lackeen summary>h3 {
         color: rgba(94, 36, 36, 1);
-    }
+    }*/
 
     #left-about-heading {
 
@@ -1085,199 +1083,240 @@ div.desc {
     }
 
     .right-about-heading {
-        Float: right;
+        Float: left;
     }
-}
 
-#left-about,
-#right-about {
-    margin: 0 auto;
-    Padding: 0 auto;
-}
+    #left-about,
+    #right-about {
+    width:100%;
+        margin: 0 auto;
+        Padding: 0 auto;
 
-#lackeen-summary {
-    height: 1250px;
-}
+    }
 
-#visit-intro {
-    text-align: center;
-    margin: 0 auto;
-    padding-bottom: 20px;
-    font-size: 200%;
+   
 
-}
+    #visit-intro {
+        text-align: center;
+        margin: 0 auto;
+        padding-bottom: 20px;
+        font-size: 200%;
 
+    }
+    hr {
+        border-top: 1px solid bisque;
+        width: 100%;
+        margin: 5px 0;
+    }
 
-#info-text-window {
-    font-size: 90%;
-    padding: 0;
-    width: 60%;
-    margin: 0 auto;
-    left: 25px;
-    top: 600px;
-}
+    #location {
+        height: 600px;
+    }
 
-#info-text-mach {
-    font-size: 90%;
-    padding: 0;
-    width: 70%;
-    margin: 0 auto;
-    top: 20px;
-    right: 30px;
-}
+    #map,
+    #directions {
+        width: 100%;
+        margin-left: 5px;
+        padding: 0 auto;
+    }
+    #directions {
+        text-align: center;
+    }
 
-#info-text-intro {
-    font-size: 95%;
-    padding: 0;
-    height: 210px;
-    width: 90%;
-    top: 300px;
-    margin: 0 auto 30;
-    clear: left;
-}
+    #info-text-window {
+        font-size: 90%;
+        padding: 0;
+        width: 60%;
+        margin: 0 auto;
+        left: 25px;
+        top: 600px;
+    }
 
-#info-text-door {
-    font-size: 90%;
-    padding: 0;
-    height: 200px;
-    width: 60%;
-    margin: 0 auto;
-    left: 50px;
-    bottom: 90px;
+    #info-text-mach {
+        font-size: 90%;
+        padding: 0;
+        width: 70%;
+        margin: 0 auto;
+        top: 20px;
+        right: 30px;
+    }
 
-}
+    #info-text-intro {
+        font-size: 95%;
+        padding: 0;
+        height: 210px;
+        width: 90%;
+        top: 300px;
+        margin: 0 auto 30;
+        clear: left;
+    }
 
-#info-text-window>h2,
-#info-text-mach>h2,
-#info-text-intro>h2,
-#info-text-door>h2 {
-    text-transform: capitalize;
-    text-decoration-line: 1px;
-    letter-spacing: 0;
-}
+    #info-text-door {
+        font-size: 90%;
+        padding: 0;
+        height: 200px;
+        width: 60%;
+        margin: 0 auto;
+        left: 50px;
+        bottom: 90px;
 
-.stowe-missal-background {
-    clear: left;
-    background: url("../images/sm-cover.jpg");
-    background-size: cover;
-    background-position-x: 50%;
-    background-position-y: 0%;
-    height: 400px;
-    width: 100%;
-}
+    }
 
-#info-text {
-    top: 20px;
-}
+    #info-text-window>h2,
+    #info-text-mach>h2,
+    #info-text-intro>h2,
+    #info-text-door>h2 {
+        text-transform: capitalize;
+        text-decoration-line: 1px;
+        letter-spacing: 0;
+    }
 
-#info-text h2 {
+    .stowe-missal-background {
+        clear: left;
+        background: url("../images/sm-cover-both.jpg");
+        background-size: cover;
+        background-position-x: 50%;
+        background-position-y: 0%;
+        height: 400px;
+        width: 100%;
+    }
 
-    color: rgba(94, 36, 36, 1);
-    text-transform: capitalize;
-    text-align: center;
-    font-size: 200%;
-
-}
-
-#info-text {
-    top: 100px;
-}
-
-#info-text h3 {
-    color: transparent;
-}
-
-#sm-summary {
-    height: 1100px;
-    margin: 0 auto;
-
-}
-
-.left-about-heading-sm {
-    width: 85%;
-    text-align: left;
-
-    line-height: 20px;
-    margin-right: 30px;
-    margin-bottom: 50px;
-}
-
-.right-about-heading-sm {
-    width: 85%;
+    #info-text-sm h2,
+    #info-text-sm h3 {
 
 
-    line-height: 20px;
-    clear: both;
-    margin-left: 30px;
-    margin-bottom: 50px;
-}
-
-.right-about-heading-sm p {
-    text-align: left;
-}
-
-.left-about-heading-sm h2,
-.right-about-heading-sm h2 {
-    text-align: left;
-    padding-bottom: 20px;
-}
-
-#lackeen-intro {
-    text-transform: capitalize;
-}
-
-#sm-pics {
-    height: 1700px;
-}
-
-div.sm-gallery {
-    width: 300px;
-    height: 500px;
-    margin: 5px 30px;
-}
-
-#final-line>img {
-
-    padding-bottom: 30px;
-    max-height: 100px;
-    max-width: 100%;
-    background: url=("../images/sm-signoff-big.jpg")
-}
-
-.contact-form>h2 {
-    text-transform: capitalize;
-    text-align: center;
-    font-size: 130%;
-}
-
-.join-button {
-    margin: 0 auto;
-}
-
-#info-text-fdest {
-
-    font-size: 130%;
-    font-family: eczar, serif;
-    text-transform: capitalise;
-
-    text-align: center;
-
-    padding: 10px auto;
+        text-transform: capitalise;
+        text-align: left;
+        color: bisque;
 
 
-    height: 200px;
-    width: 40%;
 
-    bottom: 100px;
-    left: 30px;
 
-    color: rgba(94, 36, 36, 1);
-    background-color: transparent;
-    position: absolute;
-    border: none;
+    }
 
-}
+    #info-text {
+        top: 20px;
+        width: 50%;
+        text-transform: capitalize;
+    }
 
-#info-text-fdest>h2 {
-    color: rgba(94, 36, 36, 1);
+    #info-text>h2 {
+        font-size: 80%;
+        padding: 0;
+    }
+
+    #info-text-sm {
+        width: 80%;
+        background-color: transparent;
+        border: none;
+    }
+
+    #info-text h2 {
+
+        color: rgba(94, 36, 36, 1);
+        text-transform: capitalize;
+        text-align: center;
+        font-size: 200%;
+
+    }
+
+   #sm-summary {
+        height: 1100px;
+        margin: 0 auto;
+
+    }
+
+    .left-about-heading-sm {
+        width: 85%;
+        text-align: left;
+
+        line-height: 20px;
+        margin-right: 30px;
+        margin-bottom: 50px;
+    }
+
+    .right-about-heading-sm {
+        width: 85%;
+
+
+        line-height: 20px;
+        clear: both;
+        margin-left: 30px;
+        margin-bottom: 50px;
+    }
+
+    .right-about-heading-sm p {
+        text-align: left;
+    }
+
+    .left-about-heading-sm h2,
+    .right-about-heading-sm h2 {
+        text-align: left;
+        padding-bottom: 20px;
+    }
+
+    #lackeen-intro {
+        text-transform: capitalize;
+    }
+
+    #sm-pics {
+        height: 1700px;
+    }
+
+    div.sm-gallery {
+        width: 300px;
+        height: 500px;
+        margin: 10px 30px;
+    }
+
+    #final-line>img {
+
+        padding-bottom: 30px;
+        max-height: 100px;
+        max-width: 100%;
+        background: url=("../images/sm-signoff-big.jpg")
+    }
+
+    .contact-form {
+        margin-top: 20px;
+    }
+
+    .contact-form>h2 {
+        text-transform: capitalize;
+        text-align: center;
+        font-size: 120%;
+    }
+
+    .join-button {
+        margin: 0 auto;
+    }
+
+    #info-text-fdest {
+
+        font-size: 130%;
+        font-family: eczar, serif;
+        text-transform: capitalise;
+
+        text-align: center;
+
+        padding: 10px auto;
+
+
+        height: 200px;
+        width: 40%;
+
+        bottom: 100px;
+        left: 30px;
+
+        color: rgba(94, 36, 36, 1);
+        background-color: transparent;
+        position: absolute;
+        border: none;
+
+    }
+
+    #info-text-fdest>h2 {
+        color: rgba(94, 36, 36, 1);
+    }
+
 }
